# docling-rs

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  STATUS.md  build.rs  data.md  doc.md  doc1.json  doc1.md  doc2.json  doc2.md  doc3.json  good.md  good2.md  malformed.md  root.md  rustfmt.toml  test.json  test.md  test.txt
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: MANUAL_PHASE1.md
examples/: README.md  basic_conversion.rs  chunking_basic.rs  chunking_hybrid.rs  chunking_rag.rs  json_serialization.rs
pdfium/: README.md
scripts/: test-cli-manual.sh
specs/001-vamos-a-empezar/: data-model.md  (+5 more)
src/: converter.rs  error.rs  format.rs  lib.rs
subdir/: nested.md
tests/: backend_csv.rs  backend_docx.rs  backend_html.rs  backend_markdown.rs  chunking_contract.rs  chunking_hierarchical.rs  chunking_hybrid.rs  chunking_integration.rs  chunking_tokenizer.rs  contract_backend.rs  contract_cli.rs  contract_doclingdocument.rs  contract_inputdocument.rs  contract_node.rs  contract_pdf_backend.rs  contract_pdf_layout.rs  contract_pdf_ocr.rs  contract_pdf_tables.rs  contract_pipeline.rs  contract_table.rs  contract_text.rs  converter.rs  integration_cli_basic.rs  integration_cli_batch.rs  integration_cli_errors.rs  integration_end_to_end.rs  integration_pdf_encrypted.rs  integration_pdf_images.rs  integration_pdf_multicolumn.rs  integration_pdf_multipage.rs  integration_pdf_ocr.rs  integration_pdf_tables.rs  integration_pdf_text_extraction.rs  pipeline_simple.rs
(+95 files in other folders)
