[package]
name = "docling-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Docling-rs Contributors"]
description = "Native Rust document processing library for extracting structured text from Markdown, HTML, CSV, and DOCX files"
license = "MIT"
repository = "https://github.com/your-org/docling-rs"
keywords = ["document", "parsing", "markdown", "html", "docx"]
categories = ["parsing", "text-processing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
scraper = "0.17"
csv = "1.3"
docx-rs = "0.4"
infer = "0.15"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Phase 2: Chunking dependencies
tokenizers = "0.15"
unicode-segmentation = "1.11"
# Phase 3: PDF processing dependencies
pdfium-render = "0.8"
image = "0.25"
# Phase 3e: OCR dependencies (optional, requires tesseract installation)
rusty-tesseract = { version = "1.1", optional = true }
# Phase 5: CLI dependencies
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
printpdf = "0.7"  # For creating test PDF fixtures

[features]
default = []
ocr = ["rusty-tesseract"]

[lib]
name = "docling_rs"
path = "src/lib.rs"

[[bin]]
name = "docling-rs"
path = "src/bin/docling-rs.rs"

[lints.clippy]
# Enforce best practices (especially for new PDF module)
undocumented_unsafe_blocks = "deny"
panic = "deny"
